# siori

./: Cargo.toml  LICENSE  README.ja.md  README.md  siori.rb.template
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  diff_viewer.rs  lib.rs  main.rs  ui.rs  version.rs
test/: bulk_operations.rs  discard_behavior.rs
