[package]
name = "siori"
version = "0.1.8"
edition = "2024"
rust-version = "1.85"
description = "A simple Git TUI for vibe coders"
license = "MIT"
repository = "https://github.com/takuma-ogura/siori"
homepage = "https://github.com/takuma-ogura/siori"
readme = "README.md"
keywords = ["git", "tui", "terminal", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
git2 = "0.20"
anyhow = "1.0"
unicode-width = "0.2"
toml = "0.8"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
